--- a/src/result.css
+++ b/src/result.css
@@ -35,13 +35,13 @@ h1{
 }
 
 h2{
-    font-size: 80px;
+    font-size: 90px;
     color: white;
     text-shadow: 2px 2px 3px rgb(3, 85, 72);
 }
 
 h3{
-    font-size: 50px;
+    font-size: 70px;
     color: white;
     text-shadow: 1px 1px 2px rgb(3, 85, 72);
 }
@@ -49,12 +49,12 @@ h3{
 #container{
     display: flex;
     width: 100%;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    padding: 0 5vw;
+    padding: 0 3vw;
 }
 
-#play-again-button{
+.button{
     border: none;
     font-family: pixelFont;
     border-radius: 13px;
@@ -63,6 +63,7 @@ h3{
     background: #C8EACE;
     box-shadow: 0px 0px 0px 2px rgba(3,85,72,1),
     5px 5px 0px 0px rgba(3,85,72,1);
+    margin-right: 30px;
 }
 
 
